feat: adicionado sobre

--- a/paginas/sobre/index.html
+++ b/paginas/sobre/index.html
@@ -39,24 +39,24 @@
             <div class="about-image">
             </div>
             <div class="about-content">
-                <h2>Minha Jornada na Tecnologia</h2>
-                <p>Minha trajetória no mundo da tecnologia começou há mais de cinco anos. Sou Victor Cavalaro, um profissional de Tecnologia da Informação com vasta experiência em programação e desenvolvimento. Minha paixão por tecnologia e inovação me impulsiona a buscar sempre o melhor em todas as áreas que atuo.</p>
+                <h2>Nossa Jornada no Mundo</h2>
+                <p>A história climática do mundo reflete a complexa relação entre o planeta Terra e suas mudanças ambientais ao longo de milhões de anos. O clima da Terra já passou por períodos de intenso calor e congelamento, moldando a geografia, a vida e a evolução das espécies. Esses eventos históricos são fundamentais para entender o atual cenário das mudanças climáticas e os desafios que enfrentamos hoje.</p>
                 <div class="cards">
                     <div class="card">
-                        <h3>Experiência Profissional</h3>
-                        <p>Com cinco anos de experiência na área de TI, adquiri conhecimento em diversas tecnologias e práticas do setor, contribuindo para projetos de sucesso.</p>
+                        <h3>Períodos de Glaciações</h3>
+                        <p>O planeta passou por diversas eras glaciais, também conhecidas como "Idades do Gelo", em que grande parte da superfície terrestre estava coberta por camadas de gelo. Durante esses períodos, as temperaturas médias globais caíram significativamente, afetando a biodiversidade e o desenvolvimento das civilizações humanas.</p>
                     </div>
                     <div class="card">
-                        <h3>Programação</h3>
-                        <p>Minha expertise em desenvolvimento abrange diversas linguagens de programação, incluindo JavaScript, Python, e C++, o que me permite criar soluções eficientes e inovadoras.</p>
+                        <h3>Período Quente do Holoceno</h3>
+                        <p>Após a última era glacial, o Holoceno, iniciado há cerca de 11.700 anos, marcou um período de aquecimento gradual. Esse período foi crucial para o surgimento da agricultura e das primeiras civilizações humanas. O clima mais estável permitiu o desenvolvimento de assentamentos humanos e avanços culturais.</p>
                     </div>
                     <div class="card">
-                        <h3>Programação</h3>
-                        <p>Minha expertise em desenvolvimento abrange diversas linguagens de programação, incluindo JavaScript, Python, e C++, o que me permite criar soluções eficientes e inovadoras.</p>
+                        <h3>Pequena Idade do Gelo</h3>
+                        <p>Entre os séculos XIV e XIX, o mundo experimentou um período de leve resfriamento conhecido como a Pequena Idade do Gelo. Esse fenômeno impactou a agricultura e a sociedade, causando colheitas fracassadas, fomes e invernos rigorosos, especialmente na Europa.</p>
                     </div>
                     <div class="card">
-                        <h3>Programação</h3>
-                        <p>Minha expertise em desenvolvimento abrange diversas linguagens de programação, incluindo JavaScript, Python, e C++, o que me permite criar soluções eficientes e inovadoras.</p>
+                        <h3>Mudanças Climáticas Atuais</h3>
+                        <p>Hoje, o mundo enfrenta um aquecimento global sem precedentes, causado principalmente pela queima de combustíveis fósseis e desmatamento. As consequências incluem derretimento de geleiras, aumento do nível do mar, eventos climáticos extremos e ameaça à biodiversidade. A conscientização global e a busca por soluções sustentáveis são cruciais para combater essa crise.</p>
                     </div>
                 </div>
             </div>
