feat: added video in about

--- a/paginas/sobre/index.html
+++ b/paginas/sobre/index.html
@@ -64,7 +64,7 @@
     </section>
 
     <div class="d-flex justify-content-center mb-4">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Wmzot4xgVL0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/bSEYVKY2sFs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
 
